# qflow

./: .clang-format  .doctr-files  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .travis.mpi  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  MANIFEST.in  Pipfile  README.md  build.py  genindex.html  github_deploy_key_bsamseth_qflow.enc  github_deploy_key_bsamseth_thesis.enc  hamiltonians.html  index.html  installation-notes.md  objects.inv  optimizers.html  project1.md  project2.md  py-modindex.html  pyproject.toml  qflow.html  runme.py  samplers.html  search.html  searchindex.js  setup.cfg  setup.py  wavefunctions.html
.github/: codeql.yml
_modules/: index.html
_sources/: hamiltonians.rst.txt  index.rst.txt  optimizers.rst.txt  qflow.rst.txt  samplers.rst.txt  wavefunctions.rst.txt
app/: main.cpp  optimize.cpp  rbm_main.cpp
ci/: install-openmpi.sh
cmake/: CodeCoverage.cmake  ConfigSafeGuards.cmake
data/: optimize_N10.txt
docs/: Makefile  README.md  conf.py  hamiltonians.rst  index.rst  optimizers.rst  qflow.rst  samplers.rst  wavefunctions.rst
include/: activation.hpp  boson.hpp  combinedcalculator.hpp  coulombharmonicoscillator.hpp  definitions.hpp  dnn.hpp  energycalculator.hpp  fixedwavefunction.hpp  gibbssampler.hpp  hamiltonian.hpp  hardsphereharmonicoscillator.hpp  hardspherewavefunction.hpp  harmonicoscillator.hpp  harmonicoscillatorhamiltonian.hpp  importancesampler.hpp  interactinghamiltonian.hpp  interactingwavefunction.hpp  jastroworion.hpp  layer.hpp  metropolissampler.hpp  mpiutil.hpp  onebodydensitycalculator.hpp  optimizer.hpp  prettyprint.hpp  psampler.hpp  rbm.hpp  rbmharmonicoscillatorhamiltonian.hpp  rbminteractinghamiltonian.hpp  rbmsymmetricwavefunction.hpp  rbmwavefunction.hpp  sampler.hpp  simplegaussian.hpp  system.hpp  vector.hpp  vmc.hpp  wavefunction.hpp  wavefunctionpooling.hpp  wavefunctionproduct.hpp
project1/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
project1-new/: CMakeLists.txt
project1-old/src/: .gitignore  CMakeLists.txt  analysis.ipynb  functions.py  run_mc.cpp  vmcimportancesolver.cpp  vmcsolver.cpp
project1/app/: main.cpp  optimize.cpp
project1/cmake/: CodeCoverage.cmake
project1/include/: argumentparser.hpp  boson.hpp  calculator.hpp  combinedcalculator.hpp  definitions.hpp  energycalculator.hpp  hamiltonian.hpp  harmonicoscillatorhamiltonian.hpp  importancesampler.hpp  interactinghamiltonian.hpp  interactingwavefunction.hpp  metropolissampler.hpp  onebodydensitycalculator.hpp  optimizer.hpp  sampler.hpp  simplegaussian.hpp  system.hpp  vmc.hpp  wavefunction.hpp
project1/python/: Worksheet.ipynb  analysis.ipynb  functions.py
project1/report/: references.bib  report.tex
project1/results/: vmc_configurations.csv  vmc_imp_configurations.csv
project1/src/: CMakeLists.txt  analysis.ipynb  argumentparser.cpp  b_run.cpp  boson.cpp  c_run.cpp  definitions.cpp  energycalculator.cpp  functions.py  hamiltonian.cpp  harmonicoscillatorhamiltonian.cpp  importancesampler.cpp  interactinghamiltonian.cpp  interactingwavefunction.cpp  main.cpp  metropolissampler.cpp  onebodydensitycalculator.cpp  optimizer.cpp  plot.py  run_MC.py  run_mc.cpp  sampler.cpp  simplegaussian.cpp  system.cpp  vmcimportancesolver.cpp  vmcimportancesolver.hpp  vmcsolver.cpp  vmcsolver.h  vmcsolver.hpp  wavefunction.cpp
project1/tests/: boson.cpp  harmonicoscillatorhamiltonian.cpp  importancesampler.cpp  interactinghamiltonian.cpp  interactingwavefunction.cpp  metropolissampler.cpp  samplercheck.cpp  simplegaussian.cpp  system.cpp
projects/: .gitignore  CMakeLists.txt  README.md  project2.md
py_src/: pydnn.cpp  pyhamiltonian.cpp  pylayer.cpp  pymain.cpp  pyoptimizer.cpp  pysampler.cpp  pywavefunction.cpp
python/: RBM.ipynb  Sympy.ipynb  analysis.ipynb  functions.py  pybindexample.cpp  qmc.py
qflow/: __init__.py  definitions.cpp  definitions.hpp  distance.cpp  distance.hpp  mpi.py  mpiutil.cpp  mpiutil.hpp  pymain.cpp  statistics.py  system.hpp  training.py  vector.hpp
qflow_backend/: pyactivation.cpp  pyhamiltonian.cpp  pylayer.cpp  pymain.cpp  pyoptimizer.cpp  pysampler.cpp  pywavefunction.cpp
report/: project2.tex
scripts/: Helium4.ipynb  Jastrow-McMillian.ipynb  Jastrow-Pade-sympy.ipynb  Jastrow-sympy.ipynb  QD-run.py  Quantum-dots-results.ipynb  benchmark.py  compute_stats.py  dnntest.py  helium-manual.py  helium-run.py  rbm-sym-vs-nonsym.ipynb
src/: activation.cpp  boson.cpp  calculator.cpp  coulombharmonicoscillator.cpp  dnn.cpp  gibbssampler.cpp  hamiltonian.cpp  hardsphereharmonicoscillator.cpp  hardspherewavefunction.cpp  hardspherewavefunction.hpp  harmonicoscillator.cpp  harmonicoscillatorhamiltonian.cpp  importancesampler.cpp  interactinghamiltonian.cpp  interactingwavefunction.cpp  jastroworion.cpp  layer.cpp  metropolissampler.cpp  mpiutil.cpp  onebodydensitycalculator.cpp  optimizer.cpp  rbmharmonicoscillatorhamiltonian.cpp  rbminteractinghamiltonian.cpp  rbmsymmetricwavefunction.cpp  rbmwavefunction.cpp  sampler.cpp  simplegaussian.cpp  system.cpp  wavefunction.cpp  wavefunctionpooling.cpp  wavefunctionproduct.cpp
tests/: boson.cpp  gibbssampler.cpp  hardsphereharmonicoscillator.cpp  hardspherewavefunction.cpp  harmonicoscillatorhamiltonian.cpp  interactinghamiltonian.cpp  interactingwavefunction.cpp  main.cpp  optimizer.cpp  rbmwavefunction.cpp  samplercheck.cpp  simplegaussian.cpp  system.cpp  test_activation.py  test_dnn.py  test_dnn_benchmark.py  test_fixedwavefunction.py  test_hamiltonian_benchmarks.py  test_input_sorter.py  test_jastrow_mcmillian.py  test_jastrow_orion.py  test_jastrow_pade.py  test_metrics.py  test_simplegaussian.py  test_sum_pooling.py  test_symmetric_rbm.py  test_symmetry_metric.py  test_wavefunctionproduct.py  testutils.py  wavefunctionproduct.cpp
writing/: .gitignore  Appendix.tex  AutomaticDifferentiation.tex  Conclusion.tex  Implementation.tex  Introduction.tex  LiquidHelium.tex  MachineLearning.tex  Makefile  MergingVMCandML.tex  MonteCarlo.tex  Parallelization.tex  Qflow.tex  QuantumDots.tex  QuantumTheory.tex  README.md  README.org  (+12 more)
(+201 files in other folders)
